# ml_for_finance

./: L6_LASSO_Regression_Analysis.ipynb  Lab_Capm_FF_Carhart.ipynb  Lecture_Notes.md  README.md  notebook_week4.ipynb  notebook_week_2.ipynb  notebook_week_3.ipynb  notes_week3.md  notes_week4.md  notes_week5.2.md  notes_week5.md  notes_week_2.md  pyproject.toml  week2_lab.ipynb  week3_lab.ipynb  week4_lab.ipynb
data/: AAPL_2022.csv  BankChurners_small.csv  BankChurners_small_updated.csv  Data_ret_pred.xlsx  factors.csv  sp500.csv
solutions/: IF2211_Tutorial 1_Questions.ipynb  lab_week6.ipynb
